--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,15 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/setup-checkout@v4
+        uses: action/checkout@v3
 
-      - name: Setup Node.js
-        uses: action/setup-node$v4
-        with:
-          node-version: '18'
-
-      - name: Install Depedencies
-        run: npm install
-      
-      - name: Run Tests
-        run: npm test
+      - name: Install Vercel CLI
+        run: npm install --global vercel
