--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,21 @@
-name: CI/CD Workflow
-
+name: Vercel Production Deployment
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
-  lint:
-    name: Run ESLint & Prettier
+  Deploy-Production:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: action/checkout@v4
-
-      - name: Install node.js
-        uses: action/setup-node@v4
-        with:
-          node-version: [18.x, 20.x, 22.x]
-          cache: 'npm'
-        
-      - name: Install Depedencies
-        run: npm install
-
-      - name: Install ESLint
-        run: npm run lint
-
-      - name: Install Prettier
-        run: npm run format -- --check
-
-type-check:
-  name: TypeScript Type Checking
-  runs-on: ubuntu-latest
-  needs: lint
-
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-
-    - name: Install Vercel CLI
-      run: npm install -g vercel
-
-    - name: Deploy to Vercel
-      run: vercel --prod --yes --token={{ secret.VERCEL_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
